# python_package

./: .gitignore  LICENSE  README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .gitignore  Makefile  pyproject.toml
